test-cases/call_unknown.exp
Error detected during type checking of module(s) call_unknown
[91mtest-cases/call_unknown.wybe:1:24: 'nonexistent_proc' unknown in 'foo'
[0m